--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "node-sass": "^4.12.0",
+    "now": "^16.1.3",
     "sirv-cli": "^0.4.4"
   },
   "scripts": {
