--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "firebase": "^6.6.0",
     "node-sass": "^4.12.0",
     "now": "^16.1.3",
+    "rxfire": "^3.8.0",
+    "rxjs": "^6.5.3",
     "sirv-cli": "^0.4.4"
   },
   "scripts": {
