--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "devDependencies": {
+    "@beyonk/svelte-notifications": "^1.1.2",
     "npm-run-all": "^4.1.5",
     "rollup": "^1.12.0",
     "rollup-plugin-commonjs": "^10.0.0",
@@ -18,7 +19,8 @@
     "now": "^16.1.3",
     "rxfire": "^3.8.0",
     "rxjs": "^6.5.3",
-    "sirv-cli": "^0.4.4"
+    "sirv-cli": "^0.4.4",
+    "toastr": "^2.1.4"
   },
   "scripts": {
     "build": "rollup -c",
